# coven-cave

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  PATENTS  PROVENANCE.md  README.md  SECURITY.md  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  server.mjs  server.ts  tsconfig.json  tsconfig.tsbuildinfo  vault.yaml  vitest.config.ts
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
automations/: familiar-daily-notes.toml  familiar-weekly-reflection.toml
docs/: authoring-assist.md  chat-github-integration.md  codeql.md  content-gen-flow-plan.md  content-gen-flow-spec.md  covenwiki-manifest.schema.json  craft-ux.md  cross-environment.md  golden-paths.md  ios-connection-cloud-plan.md  ios-native-rebuild.md  knowledge-vault.md  marketplace.md  mobile-readiness.md  mobile-tailscale-native.md  mobile-tailscale.md  multi-session-coordination.md  opencoven-submissions.md  role-surfaces.md  salem-chat-api-model.md  typography-demo.html  windows-runtime-cache.md  windows-sidecar-compression.md  windows-update-preparation.md
marketplace/: catalog.json  marketplace.json
public/: manifest.webmanifest  sw.js
screenshots/: CONTRIBUTING.md
scripts/: api-http-smoke.mjs  beads-familiar-workflow.test.mjs  beads-pr-bridge.test.mjs  beads-pr-bridge.ts  beads-pr-patrol.test.mjs  beads-pr-patrol.ts  beads-pr-shared.ts  build-ios-markdown.mjs  build-ios-terminal.mjs  build-sandbox-runtime.mjs  build-sandbox-runtime.test.mjs  bundle-budget.mjs  bundle-budget.test.mjs  capture-chat-screenshot.mjs  capture-library-smoke.mjs  capture-mobile-screenshot.mjs  capture-screenshots.mjs  cave-home-migration-windows.test.ts  check-tests-wired.mjs  coven-hfr-export.test.mjs  coven-hfr-export.ts  covenwiki-fs.ts  covenwiki-generate-cli.test.mjs  covenwiki-generate.ts  covenwiki-regen-cli.test.mjs  covenwiki-regen.ts  crafts-audited-content.test.mjs  cross-environment.test.ts  dependency-policy.test.mjs  dev-app.sh  fix-node-pty-spawn-helper.mjs  generate-daily-notes.mjs  generate-icon-subset.mjs  generate-latest-json.mjs  generate-latest-json.test.mjs  generate-pwa-icons.mjs  generate-tray-icon.py  git-hooks-pre-commit.test.mjs  install-git-hooks.sh  ios-app-store-assets.test.mjs  (+80 more)
src/: middleware.test.ts  proxy-behavior.test.ts  proxy-helpers.ts  proxy.ts  server-heap-monitor.test.ts  server-pty-ws.test.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.ios.plist  Info.plist  release-runtime.test.mjs  tauri.conf.json  tauri.ios.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: browser-child-reporting.json  default.json  loopback-browser.json  loopback-notch.json  loopback-speech.json  loopback-updater.json  loopback-window-drag.json  mobile-tailscale.json
src-tauri/frontend-stub/: index.html  startup.html
src-tauri/icons/: icon.icns  tray-icon-36.rgba
src-tauri/permissions/: default.toml  desktop-permissions.test.mjs  pty.toml  speech.toml
src-tauri/resources/server-archive/: placeholder.txt
src-tauri/src/: browser.rs  lib.rs  pty.rs  sidecar_archive.rs  speech.rs  windows_process_job.rs
src-tauri/windows/fragments/: sidecar-cache-cleanup.wxs
tests/: board-attachments.spec.ts  chat-boot-landing.spec.ts  chat-rename.spec.ts  chat-sidebar-nav.spec.ts  chat-split-panes.spec.ts  chat-task-chip-nav.spec.ts  chat-thread-rail.spec.ts  code-rail.spec.ts  dashboard-cockpit.spec.ts  familiar-work-queue.spec.ts  grimoire-autosave.spec.ts  keyboard-shortcuts.spec.ts  marketplace-crafts.spec.ts  marketplace-skill-builder.spec.ts  onboarding-wizard.spec.ts  projects-toolbar-responsive.spec.ts  prompt-enhance.spec.ts  settings-familiar-picker.spec.ts
workflows/: annotate-document.cave.json  archive-memory.cave.json  coordination-router.cave.json  curate-reading-list.cave.json  nova-release-review.cave.json  prepare-social-post.cave.json  research-brief.cave.json  (+3 more)
(+2265 files in other folders)
