[package]
name = "app"
version = "0.0.178"
description = "Desktop control room for OpenCoven familiars, workflows, memory, and local agent sessions."
authors = ["OpenCoven contributors"]
license = "MIT OR AGPL-3.0-only"
repository = "https://github.com/OpenCoven/coven-cave"
homepage = "https://github.com/OpenCoven/coven-cave"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# tray-icon moved to the desktop-only target block below — mobile (iOS/
# Android) doesn't have a tray and trying to enable the feature there
# breaks the build.
tauri = { version = "2.11.2", features = ["unstable", "macos-private-api"] }
tauri-plugin-log = "2"
# tauri-plugin-notification supports iOS and Android out of the box, so
# this stays cross-platform; the JS-side `native-notify` wrapper handles
# the first-run permission prompt the OS surfaces.
tauri-plugin-notification = "2"
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
tauri-plugin-os = "2"

# Desktop-only deps. `portable-pty` cannot build on iOS/Android (no
# fork, no /dev/ptmx); the bottom-terminal surface gates its frontend
# behind `__TAURI_OS__` so mobile-Tauri falls back to the same
# "Terminal is only available inside the CovenCave desktop app"
# placeholder as the Tailscale-browser path.
#
# Cargo target predicates can't use Tauri's custom `cfg(desktop)` here —
# Cargo only resolves built-in cfg predicates at manifest-parse time.
# Spelling it as "not(ios) and not(android)" is equivalent to
# `cfg(desktop)` for the platforms we care about.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api"] }
portable-pty = "0.8"
# Desktop auto-update: the updater plugin checks/downloads/installs signed
# release artifacts; process gives us relaunch() after an install. Both are
# desktop-only (mobile updates via the App Store / TestFlight).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Windows packages the large Next.js sidecar as one archive instead of one
# WiX component per file. The launcher verifies and extracts it on first use.
[target.'cfg(target_os = "windows")'.dependencies]
fs2 = "0.4.3"
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

# OS-level glass for the quick-chat tray window: NSVisualEffectView vibrancy
# behind the transparent webview on macOS (the only platform we apply it on;
# the crate compiles everywhere and the call sites are cfg(target_os) gated).
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
# Raw msg_send access to NSWindow's standard buttons (traffic-light
# show/hide follows the side panel); already in the tree via tauri/wry.
objc2 = "0.6"
